--- a/Paveida2.csproj
+++ b/Paveida2.csproj
@@ -55,10 +55,19 @@
     <None Update="ClothesPics\OuterWear\6.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="ClothesPics\shoes\RandomInternetShoes.jpg">
+    <None Update="ClothesPics\shoes\3.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="ClothesPics\shoes\shoes2.jpg">
+    <None Update="ClothesPics\shoes\4.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="ClothesPics\shoes\5.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="ClothesPics\shoes\6.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="ClothesPics\shoes\7.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="ClothesPics\tops\InternetWhiteTop.jpg">
